Scope menu styles to prevent CSS bleed

--- a/frontend/src/styles/navbarStyles.css
+++ b/frontend/src/styles/navbarStyles.css
@@ -17,13 +17,13 @@
   width: 100px;
 }
 
-ul {
+.menu ul {
   align-items: center;
   display: flex;
   justify-content: center;
 }
 
-ul li {
+.menu ul li {
   list-style: none;
   margin: 0 1rem;
 }
@@ -45,7 +45,7 @@ ul li {
 }
 
 @media (max-width: 596px) {
-  ul {
+  .menu ul {
     display: none;
   }
 }
